
examples_task = executable('task', 'task.cpp',
    include_directories:[base_inc_dir],
    dependencies : [thread,uring,atomic_dep],
    link_with : [
        smp_lib
    ]
)

examples_async = executable('async', 'async.cpp',
    include_directories:[base_inc_dir],
    dependencies : [thread,uring,atomic_dep],
    link_with : [
        smp_lib
    ]
)

examples_read_file = executable('read_file', 'read_file.cpp',
    include_directories:[base_inc_dir],
    dependencies : [thread,uring,atomic_dep],
    link_with : [
        smp_lib
    ]
)

examples_http = executable('http', 'http.cpp',
    include_directories:[base_inc_dir],
    dependencies : [thread,uring,atomic_dep],
    link_with : [
        smp_lib
    ]
)

examples_read_file_batch = executable('read_file_batch', 'read_file_batch.cpp',
    include_directories:[base_inc_dir],
    dependencies : [thread,uring,atomic_dep],
    link_with : [
        smp_lib
    ]
)

examples_read_file_link = executable('read_file_link', 'read_file_link.cpp',
    include_directories:[base_inc_dir],
    dependencies : [thread,uring,atomic_dep],
    link_with : [
        smp_lib
    ]
)

examples_io_cancel = executable('io_cancel', 'io_cancel.cpp',
    include_directories:[base_inc_dir],
    dependencies : [thread,uring,atomic_dep],
    link_with : [
        smp_lib
    ]
)

examples_coro_cancel = executable('coro_cancel', 'coro_cancel.cpp',
    include_directories:[base_inc_dir],
    dependencies : [thread,uring,atomic_dep],
    link_with : [
        smp_lib
    ]
)

examples_generator = executable('generator', 'generator.cpp',
    include_directories:[base_inc_dir],
    dependencies : [thread,uring,atomic_dep],
    link_with : [
        smp_lib
    ]
)

examples_poll = executable('poll', 'poll.cpp',
    include_directories:[base_inc_dir],
    dependencies : [thread,uring,atomic_dep],
    link_with : [
        smp_lib
    ]
)

examples_timer = executable('timer', 'timer.cpp',
    include_directories:[base_inc_dir],
    dependencies : [thread,uring,atomic_dep],
    link_with : [
        smp_lib
    ]
)